--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nuxt": "^2.3.4"
+    "@types/node": "^10.12.18",
+    "nuxt": "^2.3.4",
+    "nuxt-property-decorator": "^1.3.1",
+    "nuxt-typescript": "^0.11.0",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2"
   }
 }
