ポケモン図鑑的なページを作ってみた、lint-fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "strict": true,
     "sourceMap": true,
     "noUnusedLocals": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true
   }
 }
